<resources>
    <string name="app_name">KotlinApp</string>
    <string name="your_maps_api_key">AIzaSyAi6pFNwp4F6-NEk7VIXBBwJqG3LZGd9Vw</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First name:</string>
    <string name="form_txt">Form Filling App</string>
    <string name="last_name">Last name:</string>
    <string name="submit">Submit</string>
    <string name="welcome_text">Welcome to the App</string>
    <string name="enter_text_msg">Please enter the information!</string>
    <string name="color_creator_title">Color RGB Color</string>
    <string name="color_creator_desc">Add two hexadecimal characters between 0-9, A-F or a-f without the \'#\'</string>
    <string name="red_channel">Red Channel</string>
    <string name="green_channel">Green Channel</string>
    <string name="blue_channel">Blue Channel</string>
    <string name="create_color">Create Color</string>
    <string name="display_the_color_created">Display the color created.</string>
    <string name="save_restore_title">Enter your name and email for a discount code at Your Favourite Shop!</string>
    <string name="email_label">Email</string>
    <string name="discount_label">Get Discount</string>
    <string name="discount_code_confirmation">Hey %s! Here is your discount code!</string>
    <string name="add_text_validations">Please fill in all form fields!</string>
    <string name="intent_app_header_title">Please enter your name and then get started!</string>
    <string name="intent_app_welcome_txt">Hello %s, we hope you enjoy this app!</string>
    <string name="intent_app_enter_fullname_txt">Enter your full name:</string>
    <string name="intent_app_submit_txt">SUBMIT</string>
    <string name="retrieve_result_title">Please click the button below to choose your favorite color of the rainbow!</string>
    <string name="retrieve_result_header_txt">Rainbow Colors</string>
    <string name="retrieve_result_footer_txt">Click the button above which is your favorite color of the rainbow.</string>
    <string name="retrieve_result_color_chosen_message_txt">%s is your favorite color!</string>
    <string name="retrieve_result_submit_btn_txt">CHOOSE COLOR</string>
    <string name="retrieve_result_red_txt">RED</string>
    <string name="retrieve_result_orange_txt">ORANGE</string>
    <string name="retrieve_result_yellow_txt">YELLOW</string>
    <string name="retrieve_result_green_txt">GREEN</string>
    <string name="retrieve_result_blue_txt">BLUE</string>
    <string name="retrieve_result_indigo_txt">INDIGO</string>
    <string name="retrieve_result_violet_txt">VIOLET</string>
    <string name="retrieve_result_unexpected_color_txt">Unexpected color</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="standard_launch_mode">Standard</string>
    <string name="single_top_launch_mode">Single Top</string>
    <string name="unexpected_button_pressed">Unexpected Button Pressed</string>
    <string name="header_text">Please enter your username and password below to login:</string>
    <string name="welcome_login_text">Hello \'%s\' you are now logged in, we hope you enjoy using the app!</string>
    <string name="login_form_entry_error">Please fill in both username and password fields!</string>
    <string name="login_error">Either your user name or password is not recognised! Please try again.</string>
    <string name="username_label">Enter your username:</string>
    <string name="password_label">Enter your password:</string>
    <string name="submit_button_text">LOGIN</string>
    <string name="back_button_text">BACK</string>
    <string name="red_text">Red</string>
    <string name="green_text">Green</string>
    <string name="blue_text">Blue</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="counter_text">Counter</string>
    <string name="hello_kotlin">Hello Kotlin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="star_signs">Star Signs</string>
    <string name="symbol">Symbol: %s</string>
    <string name="date_range">Date Range: %s</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="unknown_star_sign">Unknown Star Sign</string>
    <string name="quiz_app_name">Planet Quiz</string>
    <string name="largest_planet">What is the largest planet?</string>
    <string name="most_moons">Which planet has the most moons?</string>
    <string name="side_spinning">Which planet spins on its side?</string>
    <string name="mercury">MERCURY</string>
    <string name="venus">VENUS</string>
    <string name="earth">EARTH</string>
    <string name="mars">MARS</string>
    <string name="jupiter">JUPITER</string>
    <string name="saturn">SATURN</string>
    <string name="uranus">URANUS</string>
    <string name="neptune">NEPTUNE</string>
    <string name="jupiter_answer">%s Jupiter is the largest planet
    and is 2.5 times the mass of all the other planets put together.
    </string>
    <string name="saturn_answer">%s Saturn has the most moons and has 82 moons.</string>
    <string name="uranus_answer">%s Uranus spins on its side
    with its axis at nearly a right angle to the sun.</string>
    <string name="correct">CORRECT!</string>
    <string name="wrong">WRONG!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="content">Content</string>
    <string name="archive">Archive</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="bin">Bin</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="content_fragment">Content Fragment</string>
    <string name="archive_fragment">Archive Fragment</string>
    <string name="recent_fragment">Recent Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="bin_fragment">Bin Fragment</string>
    <string name="link_to_content_button">Link to Content Button</string>
    <string name="tickets">Tickets</string>
    <string name="offers">Offers</string>
    <string name="rewards">Rewards</string>
    <string name="cart">Shopping Cart</string>
    <string name="tickets_fragment">Tickets Fragment</string>
    <string name="offers_fragment">Offers Fragment</string>
    <string name="rewards_fragment">Rewards Fragment</string>
    <string name="cart_fragment"> Shopping Cart Fragment</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="family">Family</string>
    <string name="crime">Crime</string>
    <string name="history">History</string>
    <string name="dummy_text">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.
    </string>
    <string name="account">Account</string>
    <string name="mysports">My Sports</string>
    <string name="profile">Profile</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="mysports_fragment">My Sports Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="hockey">Hockey</string>
    <string name="football_fragment"> Football Fragment</string>
    <string name="basketball_fragment"> Basketball Fragment</string>
    <string name="hockey_fragment">Hockey Fragment</string>
    <string name="hello_server">Hello Server!</string>
    <string name="add_button_label">Add A CAT</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="i_m_parked_here">I\'m parked here</string>
    <string name="player_work">Player Work Manager</string>
    <string name="drank_a_glass_of_water">Drank a Glass of Water</string>
    <string name="title_activity_my_compose">MyComposeActivity</string>
    <string name="enter_number">Enter a number</string>
    <string name="click_me">Click Me</string>
    <string name="item_format">Item %s</string>
    <string name="title_activity_compose_matrix">ComposeMatrixActivity</string>
    <string name="insert_number_rows">Insert Number of Rows</string>
    <string name="insert_number_columns">Insert Number of Columns</string>
    <string name="done">Done</string>
    <string name="item_format_first_compose_app">Item %1$s %2$s</string>
    <string name="string_1">String 1</string>
    <string name="string_2">String 2</string>
    <string name="result">Result: %s</string>
    <string name="error">Error</string>
    <string name="find_factorial">Find Factorial</string>
    <string name="title_activity_1">Activity1</string>
    <string name="title_activity_2">Activity2</string>
    <string name="press_me">Press me</string>
    <string name="opened_after_x_seconds">Opened after %d seconds</string>
    <string name="label_total">Total: %d</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="add_note">Add Note</string>
    <string name="file_provider">FileProvider</string>
    <string name="saf">SAF</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="choose_the_number_of_urls_you_want_to_display">Choose the number of URLs you want to display:</string>
    <string name="randomize">Randomize</string>
    <string name="amount">Amount</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="compute">Compute</string>
    <string name="tip">Tip: %s</string>
    <string name="fab">FAB</string>
</resources>