<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/colorpicker_header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:padding="@dimen/padding_8dp"
            android:text="@string/retrieve_result_header_txt"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/red_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/retrieve_result_red_txt"/>

        <Button
            android:id="@+id/orange_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/retrieve_result_orange_txt"/>

        <Button
            android:id="@+id/yellow_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/retrieve_result_yellow_txt"/>

        <Button
            android:id="@+id/green_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/retrieve_result_green_txt"/>

        <Button
            android:id="@+id/blue_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/retrieve_result_blue_txt"/>

        <Button
            android:id="@+id/indigo_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/indigo"
            android:text="@string/retrieve_result_indigo_txt"/>

        <Button
            android:id="@+id/violet_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/violet"
            android:text="@string/retrieve_result_violet_txt"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/retrieve_result_footer_txt"
            android:textSize="18sp" />


    </LinearLayout>

</ScrollView>