<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_restore_title"
        android:textSize="@dimen/text_size_20sp"
        android:gravity="center"
        android:layout_margin="@dimen/margin_8dp"
        android:padding="@dimen/padding_4dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_20sp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/lastname_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_20sp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toEndOf="@id/first_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_20sp"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:layout_margin="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/first_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/discount_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_label"
        android:gravity="center"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/discount_code_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_20sp"
        tools:text="Hey Somebody! Here is your discount code."
        android:padding="@dimen/padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/discount_btn"/>

    <TextView
        android:id="@+id/discount_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/discount_code_confirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="LJJLKJLK12"
        />
</androidx.constraintlayout.widget.ConstraintLayout>